[package]
name = "rust-markdown-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.2"
http = "1"
http-body = "1"
tokio = { version = "1.41.0", features = ["full"] }
http-body-util = { version = "0.1" }
hyper-util = { version = "0.1.10", features = ["full"] }
hyper = { version = "1.5.1", features = ["full"] }
